@@ -111,6 +111,9 @@ ModCallbacks.MC_PRE_SLOT_SET_PRIZE_COLLECTIBLE = 1125
 ModCallbacks.MC_POST_SLOT_SET_PRIZE_COLLECTIBLE = 1126
 ModCallbacks.MC_PLAYER_INIT_PRE_LEVEL_INIT_STATS = 1127
 
+ModCallbacks.MC_PRE_FORCE_ADD_PILL_EFFECT = 1128
+ModCallbacks.MC_POST_FORCE_ADD_PILL_EFFECT = 1129
+
 ModCallbacks.MC_PRE_DEVIL_APPLY_ITEMS = 1130
 ModCallbacks.MC_PRE_DEVIL_APPLY_STAGE_PENALTY = 1131
 ModCallbacks.MC_PRE_DEVIL_APPLY_SPECIAL_ITEMS = 1132
